--- a/html/index.html
+++ b/html/index.html
@@ -2,11 +2,24 @@
 <html>
 <head>
     <meta charset='utf-8'>
+    <!-- Esto es para que el navegador pueda identificar carácteres raros 
+        (por ejemplo, que vinieron a partir de traducir la página) -->
+
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <!-- Esto es para que sea compatible con Edge -->
+
     <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <!-- Este es el título de la página -->
+
+    <meta name='viewport' content='width=device-width, initial-scale=1'> 
+    <!-- Esto es para la adaptabilidad (responsive) del sitio, 
+        es decir que sea escalable a todos los dispositivos (celulares, tablets, etc.) -->
+
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <!-- Esto hace referencia al documento de CSS -->
+
     <script src='main.js'></script>
+    <!-- Esto hace referencia al documento de JavaScript (JS) -->
 </head>
 <body>
     
