--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -5,28 +5,136 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grata Uruguay</title>
-    <link rel="stylesheet"  href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>GrataUruguay</h1>
-         <div class ="row">
-             <div class="logo">
-                <img src="multimedia/GrataIcon.png">
-             </div>
-         </div>        
-    </header>
-    <nav>
-        <ul>
-       <li><a href="">Inicio</a></li>
-       <li><a href="">Productos</a></li>
-       <li><a href="">FAQ</a></li>
-       <li><a href="">Contacto</a></li>
-       <li><a href="">Newsletter</a></li>
-       <li><a href="">Sobre Nosotros</a></li>
-       <li><a href="">SALE</a></li>
-       </ul>
-     </nav>
+    <div class ="wrapper">
+        <!-- Navegación -->
+        <nav class="main-nav">
+            <ul>
+                <li>
+                  <a href="#">Inicio</a>  
+                </li>
+                <li>
+                  <a href="#">Productos</a>  
+                </li>
+                <li>
+                  <a href="#">FAQ</a>  
+                </li>
+                <li>
+                  <a href="#">¿Por qué Grata?</a>  
+                </li>
+                <li>
+                  <a href="#">SALE</a>  
+                </li>
+                <li>
+                  <a href="#">Contacto</a>  
+                </li>
+            </ul>
+        </nav>
 
+        <!-- Top Container -->
+        <section class="top-container">
+         <header class="showcase">
+             <h1>Grata Uruguay</h1>
+             <p>Lorem ipsum dolor sit amet consectetur, 
+                 adipisicing elit. Eligendi, facilis natus corrupti 
+                 reprehenderit eaque fuga.</p>
+             <a href="#" class="btn">¿Por qué elegir Grata?</a>
+         </header>
+         <div class="top-box top-box-a">
+             <h4>Nuestro producto más popular</h4>
+             <img src="multimedia/crema1.png">
+         </div>
+         <div class="top-box top-box-a">
+            <h4>Recetas únicas</h4>
+            <img src="multimedia/plato1.png" alt="Receta1">
+            <a href="" class= "btn">¡Quiero un recetario gratis!</a>
+         </div>
+        </section>
+
+        <!-- "Cajas" con los productos -->
+        <section class="boxes">
+            <div class="box">
+                <img src="multimedia/cremaArriba.png" alt="Crema de maní chica">
+                <h3>Crema de maní 350 Gramos</h3>
+                <p> (breve descripción producto) Lorem ipsum dolor sit amet consectetur, 
+                    adipisicing elit. Ex, quibusdam.</p>
+            </div>
+            <div class="box">
+                <img src="multimedia/cremaArriba.png" alt="Crema de maní grande">
+                <h3>Crema de maní 800 Gramos</h3>
+                <p> (breve descripción producto) Lorem ipsum dolor sit amet consectetur, 
+                    adipisicing elit. Ex, quibusdam.</p>
+            </div>
+            <div class="box">
+                <img src="" alt="Mix de frutos secos">
+                <h3>Mix de frutos secos</h3>
+                <p> (breve descripción producto) Lorem ipsum dolor sit amet consectetur, 
+                    adipisicing elit. Ex, quibusdam.</p>
+            </div>
+        </section>
+        <!-- Información sobre la empresa -->
+        <section class="info">
+            <div>
+                <h2>Preguntas Frecuentes</h2>
+                <ul>
+                    <li>
+                        ¿Es necesario refrigerar una vez abierto?
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
+                    </li>
+                    <li>
+                        ¿Por qué "crema", en vez de "manteca" o "mantequilla"?
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
+                    </li>
+                    <li>
+                        ¿Es necesario refrigerar una vez abierto?
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
+                    </li>
+                    <li>
+                        ¿Contienen algún agregado?
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
+                    </li>
+                    <li>
+                        ¿Contienen Gluten, Sal o Azúcar?
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
+                    </li>
+                    <li>
+                        ¿Cuánto tiempo duran?
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
+                    </li>
+                    <li>
+                        ¿Engordan?
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
+                    </li>
+                </ul>
+                <h2>¿Por qué Grata?</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Odit, totam saepe! Ratione vel, 
+                    ipsum fugit placeat fuga itaque voluptatem saepe nesciunt 
+                    modi veniam laborum tenetur doloribus animi quas non aspernatur?</p>
+            </div>
+        </section>
+        <!-- Redes Sociales y contactos -->
+        <section class="contact">
+            <h3>¡Quedemos en contacto!</h3>
+            <ul>
+                <li>
+                  <a href="#">Instagram</a>  
+                </li>
+                <li>
+                  <a href="#">Facebook</a>  
+                </li>
+                <li>
+                  <a href="#">Whatsapp</a>  
+                </li>
+            </ul>
+        </section>
+        <!-- Footer -->
+        <footer>
+            <p>Grata Uruguay &copy; 2021</p>
+        </footer>
+    </div>
+    <!-- Termina el wrapper -->
 </body>
-</html>                    
+</html>
