--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -22,7 +22,7 @@
                   <a href="#">FAQ</a>  
                 </li>
                 <li>
-                  <a href="#">¿Por qué Grata?</a>  
+                  <a href="#">¿Grata?</a>  
                 </li>
                 <li>
                   <a href="#">SALE</a>  
@@ -45,8 +45,9 @@
          <div class="top-box top-box-a">
              <h4>Nuestro producto más popular</h4>
              <img src="multimedia/crema1.png">
+             <p>Clásica crema de maní</p>
          </div>
-         <div class="top-box top-box-a">
+         <div class="top-box top-box-b">
             <h4>Recetas únicas</h4>
             <img src="multimedia/plato1.png" alt="Receta1">
             <a href="" class= "btn">¡Quiero un recetario gratis!</a>
@@ -80,35 +81,31 @@
                 <h2>Preguntas Frecuentes</h2>
                 <ul>
                     <li>
-                        ¿Es necesario refrigerar una vez abierto?
+                        <b>¿Es necesario refrigerar una vez abierto?</b>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
                     </li>
                     <li>
-                        ¿Por qué "crema", en vez de "manteca" o "mantequilla"?
+                        <b>¿La separación de los aceites es normal?</b>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
                     </li>
                     <li>
-                        ¿Es necesario refrigerar una vez abierto?
+                        <b>¿Contienen algún agregado?</b>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
                     </li>
                     <li>
-                        ¿Contienen algún agregado?
+                        <b>¿Contienen Gluten, Sal o Azúcar?</b>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
                     </li>
                     <li>
-                        ¿Contienen Gluten, Sal o Azúcar?
+                        <b>¿Cuánto tiempo duran?</b>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
                     </li>
                     <li>
-                        ¿Cuánto tiempo duran?
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
-                    </li>
-                    <li>
-                        ¿Engordan?
+                        <b>¿Engordan?</b>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
                     </li>
                 </ul>
-                <h2>¿Por qué Grata?</h2>
+                <h2><b>¿Por qué Grata?</b></h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Odit, totam saepe! Ratione vel, 
                     ipsum fugit placeat fuga itaque voluptatem saepe nesciunt 
@@ -118,7 +115,12 @@
         <!-- Redes Sociales y contactos -->
         <section class="contact">
             <h3>¡Quedemos en contacto!</h3>
-            <ul>
+              <div class="incons-media"></div>
+              <a href="#"><img src="multimedia/Instagram-Icon.png" alt="Logo Instagram"></a>
+              <a href="#"><img src="multimedia/Facebook-Icon.png" alt="Logo Facebook"></a>
+              <a href="#"><img src="multimedia/WhatsApp-Icon.png" alt="Logo WhatsApp"></a>
+
+            <!-- <ul>
                 <li>
                   <a href="#">Instagram</a>  
                 </li>
@@ -128,7 +130,7 @@
                 <li>
                   <a href="#">Whatsapp</a>  
                 </li>
-            </ul>
+            </ul> -->
         </section>
         <!-- Footer -->
         <footer>
