--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -37,19 +37,16 @@
         <section class="top-container">
          <header class="showcase">
              <h1>Grata Uruguay</h1>
-             <p>Lorem ipsum dolor sit amet consectetur, 
-                 adipisicing elit. Eligendi, facilis natus corrupti 
-                 reprehenderit eaque fuga.</p>
-             <a href="#" class="btn">¿Por qué elegir Grata?</a>
+             <p>Tienda de alimentos naturales. Cambia lo bueno por lo mejor.</p>
          </header>
          <div class="top-box top-box-a">
              <h4>Nuestro producto más popular</h4>
-             <img src="multimedia/crema1.png">
-             <p>Clásica crema de maní</p>
+             <img src="multimedia/CremadeManí350gr.JPG" alt="Receta1">
+              <p>Clásica crema de maní</p>
          </div>
          <div class="top-box top-box-b">
             <h4>Recetas únicas</h4>
-            <img src="multimedia/plato1.png" alt="Receta1">
+            <img src="multimedia/RecetasÚnicas.png" alt="Receta1">
             <a href="" class= "btn">¡Quiero un recetario gratis!</a>
          </div>
         </section>
@@ -57,80 +54,79 @@
         <!-- "Cajas" con los productos -->
         <section class="boxes">
             <div class="box">
-                <img src="multimedia/cremaArriba.png" alt="Crema de maní chica">
+                <img src="multimedia/CremaChica.JPG" alt="Crema de maní chica">
                 <h3>Crema de maní 350 Gramos</h3>
-                <p> (breve descripción producto) Lorem ipsum dolor sit amet consectetur, 
-                    adipisicing elit. Ex, quibusdam.</p>
+                <p>Alimento totalmente natural, elaborado 100% con maní de primera calidad y sin ningún tipo de agregados, 
+                    simplemente un clásico de alto valor nutricional.</p>
             </div>
             <div class="box">
-                <img src="multimedia/cremaArriba.png" alt="Crema de maní grande">
+                <img src="multimedia/CremadeManí800gr.JPG" alt="Crema de maní grande">
                 <h3>Crema de maní 800 Gramos</h3>
-                <p> (breve descripción producto) Lorem ipsum dolor sit amet consectetur, 
-                    adipisicing elit. Ex, quibusdam.</p>
+                <p>La edición XL del clásico, mayor duración, más tiempo de Grata. Ideal si ya implementaste Grata a tu nutrición.</p>
             </div>
             <div class="box">
-                <img src="" alt="Mix de frutos secos">
+                <img src="multimedia/MixFrutosSecos.JPG" alt="Mix de frutos secos">
                 <h3>Mix de frutos secos</h3>
-                <p> (breve descripción producto) Lorem ipsum dolor sit amet consectetur, 
-                    adipisicing elit. Ex, quibusdam.</p>
+                <p>Desayuno, merienda, snack; los frutos secos son alimentos de alta densidad nutricional 
+                    (es decir, tienen una alta cantidad de nutrientes en su compacto tamaño), 
+                    aparte de su adictivo sabor en combinación son una opción muy saludable.</p>
             </div>
         </section>
         <!-- Información sobre la empresa -->
         <section class="info">
             <div>
                 <h2>Preguntas Frecuentes</h2>
+                <hr witdh =100% noshade> 
                 <ul>
                     <li>
                         <b>¿Es necesario refrigerar una vez abierto?</b>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
+                        <p>No necesariamente, nosotros recomendamos guardarla en un lugar fresco, seco y bien cerrada, fuera de la exposición solar. 
+                            En caso de que quieras guardarla en la heladera, para que vuelva a tener su cremosidad, retirar 5-10 min antes de consumirla.</p>
+                    </li>
+                    <li>
+                        <b>¿La crema de maní engorda?</b>
+                        <p>Si bien es sabido que se trata de un alimento hipercálorico, esta visto que debido a su matriz nutricional, 
+                            es decir, su particular distribución de nutrientes resulta ser altamente saciante (esto es de intéres para todos aquellos que deseen bajar de peso).
+                            En cuanto a los frutos secos, se ha comprobado en estudios que
+                            "los frutos secos aumentan la termo-génesis (combustión de las calorías) de forma que el 
+                            consumo de frutos secos no solo no engordarían, sino que incluso ayudan a mantener activo el metabolismo por un periodo mayor de tiempo". </p>
+                    </li>
+                    <li>
+                        <b>¿Contiene algún agregado?</b>
+                        <p>Ningún agregado de cualquier tipo fue usado en el proceso de elaboración, ¡solamente maní!</p>
+                    </li>
+                    <li>
+                        <b>¿Contiene Gluten, Sal o Azúcar?</b>
+                        <p>No, incluso es un alimento recomendado para veganos, celíacos, hipertensos, 
+                            diabéticos y obviamente cualquier persona con ánimos de mejorar su alimentación.</p>
+                    </li>
+                    <li>
+                        <b>¿Cuánto tiempo dura?</b>
+                        <p>Tiene una fecha de vencimiento de 10 meses desde su elaboración (ver envase).</p>
                     </li>
                     <li>
                         <b>¿La separación de los aceites es normal?</b>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
-                    </li>
-                    <li>
-                        <b>¿Contienen algún agregado?</b>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
-                    </li>
-                    <li>
-                        <b>¿Contienen Gluten, Sal o Azúcar?</b>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
-                    </li>
-                    <li>
-                        <b>¿Cuánto tiempo duran?</b>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
-                    </li>
-                    <li>
-                        <b>¿Engordan?</b>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate modi facere repellendus officia iure soluta!</p>
+                        <p>Es totalmente normal, ocurre por decantación, este el aceite natural del maní que sube, quedando la crema abajo; 
+                            antes de consumirlo, ¡mezclalo bien y listo!</p>
                     </li>
                 </ul>
-                <h2><b>¿Por qué Grata?</b></h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Odit, totam saepe! Ratione vel, 
-                    ipsum fugit placeat fuga itaque voluptatem saepe nesciunt 
-                    modi veniam laborum tenetur doloribus animi quas non aspernatur?</p>
+                <h2>¿Por qué Grata?</h2>
+                <hr witdh =100% noshade> 
+                <p>Nuestro nombre no es más que un recordatorio a algo que en el quipo le damos mucho valor y prácticamos,
+                    ejercitar la gratitud, el agradecimiento diario, por todo lo bueno que tenemos, lo no tan bueno que nos hace 
+                    superarnos y mejorarnos cada vez; creemos y ejercitamos este valor y queremos compartirlo!
+                </p>
             </div>
         </section>
         <!-- Redes Sociales y contactos -->
         <section class="contact">
+            <div class=""> </div>
             <h3>¡Quedemos en contacto!</h3>
-              <div class="incons-media"></div>
-              <a href="#"><img src="multimedia/Instagram-Icon.png" alt="Logo Instagram"></a>
-              <a href="#"><img src="multimedia/Facebook-Icon.png" alt="Logo Facebook"></a>
-              <a href="#"><img src="multimedia/WhatsApp-Icon.png" alt="Logo WhatsApp"></a>
-
-            <!-- <ul>
-                <li>
-                  <a href="#">Instagram</a>  
-                </li>
-                <li>
-                  <a href="#">Facebook</a>  
-                </li>
-                <li>
-                  <a href="#">Whatsapp</a>  
-                </li>
-            </ul> -->
+            <div class="incons-media">
+              <a href="https://www.instagram.com/gratauruguay/?hl=es-la" target="_blank"><img src="multimedia/Instagram-Icon.png" alt="Logo Instagram"></a>
+              <a href="https://www.facebook.com/gratauruguay/" target="_blank"><img src="multimedia/Facebook-Icon.png" alt="Logo Facebook"></a>
+              <a href="https://wa.me/598098451344" target="_blank"><img src="multimedia/WhatsApp-Icon.png" alt="Logo WhatsApp"></a>
+            </div>
         </section>
         <!-- Footer -->
         <footer>
